added .inerror border
1px solid red border for contact form inputs for API updates

--- a/shared/css/shared-styles.css
+++ b/shared/css/shared-styles.css
@@ -605,6 +605,9 @@ label {
 .contactForm .inerror {
     background: #ffeeee;/*e6eff2*/
 }
+.contactForm input.inerror, .contactForm select.inerror {
+    border: 1px solid red;
+}
 .contactForm .productField {
     display: block;
     width: 100%;
