--- a/shared/css/careington-AIGbranded.css
+++ b/shared/css/careington-AIGbranded.css
@@ -1,5 +1,3 @@
-/* versioning file: /uploads/00001941/careington-AIGbranded_v1.2.css */
-
 @-ms-viewport{width: auto !important;}/*remove IE10/11 scrollbars over page*/
 *{font-family: "Helvetica Neue",Helvetica,Roboto,Arial,sans-serif !important;}
 .container {
@@ -68,26 +66,44 @@ padding:45px 0;
 .bannerarea{background:#fff;color:#333333;padding: 20px;height:auto;}
 .headerarea > div:nth-child(4){height:auto !important;}
 /** Payment boxes ****************************************************/
-.paymentinfobox:nth-child(1) {padding-right:8px;padding-left:18px !important;}
-.paymentinfobox:nth-child(2) {padding-left:8px;padding-right:18px !important;}
-.paymentinfobox:nth-child(2) > table > tbody > tr:nth-child(1) > td:nth-child(2){display:none !important;}
 
+.paymentinfobox:nth-child(2) > table > tbody > tr:nth-child(1) > td:nth-child(2){display:none !important;}
 
 .pull-left.paymentinfobox:nth-child(1) > table > tbody > tr > td:nth-child(2) > table > tbody > tr > td:nth-child(1){width:auto !important;padding:4px 0 4px 12px;}
 .pull-left.paymentinfobox:nth-child(1) > table > tbody > tr > td:nth-child(2) > table > tbody > tr > td:nth-child(2){width:auto !important;}
 
-.paymentinfobox{background:#fff;width:50% !important;padding:0;margin:0 !important;}
-.paymentinfobox > table{background:#cecaca;width:100% !important;}
+.paymentinfobox{background:#fff;width:50% !important;padding:0;margin:0 !important;min-height:auto !important;float: none !important;}
+.paymentinfobox > table{/*! background:#cecaca; */width:100% !important;}
 .paymentinfobox > table td{padding:0;vertical-align:top;}
 .paymentinfobox > table td > span:nth-child(1):not(:empty){display:inline-block;padding:4px 0 4px 12px;}
 .pull-left.paymentinfobox > table > tbody > tr > td > table > tbody > tr > td:nth-child(1){font-weight:bold;}
 .paymentinfobox > table td > h2{padding:12px 12px 24px 12px;margin:0;font-size:1.6em;margin-bottom:0;color:#333333;}
+div.container > div.span10 > div:nth-child(3){
+		height: auto !important;
 
+}
+.pull-left.paymentinfobox{
+	background: #cecaca !important;
+	height: auto !important;
+	margin-bottom: 24px !important;
+}
+.paymentinfobox:nth-child(1) {/*! padding-right:8px; */border-left:18px solid #fff;border-right:18px solid #fff;}
+.paymentinfobox:nth-child(2) {/*! padding-left:8px; */border-left:18px solid #fff;border-right:18px solid #fff;}
 @media screen and (min-width: 768px) {
+.paymentinfobox:nth-child(1) {/*! padding-right:8px; */border-right: 8px solid #fff;}
+.paymentinfobox:nth-child(2) {/*! padding-left:8px; */border-left: 8px solid #fff;}
+	div.container > div.span10 > div:nth-child(3){
+		display: table;
+		width: 100%;
+	}
+.pull-left.paymentinfobox{
+	display: table-cell;
+	vertical-align: top;
+}
 .pull-left.paymentinfobox:nth-child(1) > table > tbody > tr > td:nth-child(1){width:50% !important;}
 .pull-left.paymentinfobox:nth-child(1) > table > tbody > tr > td:nth-child(2){width:50% !important;}
 	.pull-left.paymentinfobox:nth-child(1) > table > tbody > tr > td:nth-child(2){padding-top:58px;}
-	.paymentinfobox > table{height:177px;}
+	.paymentinfobox > table{/*height:177px;*/}
 	.paymentinfobox:nth-child(2) > table > tbody > tr > td:nth-child(1){height:1px;}
 	.paymentinfobox:nth-child(2) > table > tbody > tr:last-child > td:nth-child(1) {height:auto;}
 }
@@ -330,11 +346,18 @@ input[type=radio] {
     max-width: 1200px;
 	color:#fff;
 }
+.CTAtext .CTAtext a[href^="tel"]{/* iOS auto format fix */
+    color:#fff;
+    text-decoration:none;
+}
 @media screen and (max-width: 767px) {
 	.CTAtext .CTAtext {
 		text-align: center;
 		padding: 50px 20px 18px 20px;
 		color:#1f77b0;
 	}
+	.CTAtext .CTAtext a[href^="tel"]{/* iOS auto format fix */
+		color:#1f77b0;
+		text-decoration:none;
+	}
 }
-
