--- a/shared/css/shared-styles.css
+++ b/shared/css/shared-styles.css
@@ -1458,7 +1458,7 @@ CTA BUTTONS
     cursor:default;
     opacity:0.6;
     background: #fff !important;
-	color: #e57125 !important;
+	color: #e57125 !important;/* (AIG Orange) */
 }
 /** dropCTA BUTTONS **/
 #bodyID .toggleCTA_button{display:block;border:0;color:#fff;background:#0057b8;padding:6px 12px !important;font-weight:bold;text-align:center;text-transform:uppercase;text-decoration:none;vertical-align:middle;cursor:pointer;height:auto !important;/*chome mobile nav fix*/width:100%;}
